--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,7 @@ output: bookdown::gitbook
 documentclass: book
 biblio-style: apalike
 link-citations: yes
+rmd_files: ["index.Rmd", "01-tasks.Rmd", "02-eurojob.Rmd", "03-tortues.Rmd"]
 ---
 
 ```{r setup, include = FALSE}
@@ -32,14 +33,14 @@ In week 1, we have studied how to use principal component analysis (PCA) to perf
 Before implementing PCA, we should always check that the variables are continuous and perform some exploratory analysis. Some useful codes include:
 
 ```{r echo=TRUE, eval=FALSE}
-str, summary, skim, cor #for numerical summaries
+str, skim, summary, cor #for numerical summaries
 plot, pairs #for graphical summaries
 ```
 
 Next, we perform PCA by using the command `princomp`. If the variables have been recorded on different scales or they have very different variances, then it is advisable to base the analysis on the sample correlation matrix; in this case, we set the second argument `cor` to `TRUE`. Otherwise, covariance matrix is preferred (no need to include the second argument).
 ```{r echo=TRUE, eval=FALSE}
+my.pca <- princomp(my.data, cor=TRUE) #correlation-based PCA
 my.pca <- princomp(my.data) #covariance-based PCA
-my.pca <- princomp(my.data, cor=TRUE) #covariance-based PCA
 ```
 
 To determine the number of principal components to be retained, we could use Proportion of Variation, Kaiser's method and Cattell's method. The former two methods require the standard deviation of each principal component, which can be found by using `summary(my.pca)` or `my.pca$sdev`. The last method requires a scree plot, which can be produced by using `plot(my.pca)`. 
